# BGMRPC

./: CMakeLists.txt
BGMRPCClientQml/: CMakeLists.txt
BGMRPCCommon/: CMakeLists.txt
BGMRPCCtrl/: CMakeLists.txt
BGMRPCObjectInterface/: CMakeLists.txt
BGMRPCObjectLoader/: CMakeLists.txt
BGMRPCd/: CMakeLists.txt
diy/BGMRPC/server/jsPlugin/: jsobjectprototype.cpp  jsobjectprototype.h
interfaces/JsPlugin2/: CMakeLists.txt
interfaces/JsPlugin2/JsModules/JsModuleCommon/: CMakeLists.txt
interfaces/JsPlugin2/JsModules/jsByteArray/: CMakeLists.txt
interfaces/JsPlugin2/JsModules/jsDB/: CMakeLists.txt
interfaces/JsPlugin2/JsModules/jsFile/: CMakeLists.txt
interfaces/JsPlugin2/JsModules/jsTimer/: CMakeLists.txt
interfaces/MissingObjectHandler/: CMakeLists.txt
